# src/modules/api.router.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 
 import indexRoute from "./index.routes";
+import healthRoute from "./health/health.routes";
 import userRoute from "./users/user.routes";
 import locationsRoute from "./locations/locations.routes";
 import uploadRoute from "./common/upload.routes";
@@ -22,6 +23,7 @@ import dashboardRoute from "./dashboard/dashboard.routes";
 const apiRouter = Router();
 
 apiRouter.use("/", indexRoute);
+apiRouter.use("/health", healthRoute);
 apiRouter.use("/users", userRoute);
 apiRouter.use("/locations", locationsRoute);
 apiRouter.use("/uploads", uploadRoute);
